[package]
name = "monkeydb"
version = "0.1.0"
authors = ["Ranadeep Biswas"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
clap = { version = "4.3.4", features = ["derive"] }
dbcop = { git = "https://gitlab.math.univ-paris-diderot.fr/ranadeep/dbcop" }
msql-srv = { git = "https://github.com/rnbguy/msql-srv", branch = "jdbc-old" }
mysql = "20.1.0"
nom-sql = "0.0.11"
rand = "0.8.2"
regex = "1.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.61"
sqlparser = "0.7.0"
tempfile = "3.2.0"
